ClickHouseHealthIndicator minor health down report added